# deepstream-desktop

./: .dockerignore  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md
common/: CMakeLists.txt
common/logging/: Logger.cpp  Logger.hpp
common/proto/: alert.proto  camera.proto  health.proto  notification.proto  stream.proto  system.proto
configs/: config_infer_primary.txt
deploy/: .env.example  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh
desktop/: CMakeLists.txt
desktop/src/: MainWindow.cpp  MainWindow.hpp  main.cpp
desktop/src/client/: AlertClient.cpp  AlertClient.hpp  CameraClient.cpp  CameraClient.hpp  GrpcSupport.hpp  HealthClient.cpp  HealthClient.hpp  NotificationClient.cpp  NotificationClient.hpp  StreamClient.cpp  StreamClient.hpp  SystemClient.cpp  SystemClient.hpp
desktop/src/pages/: AlertPage.cpp  AlertPage.hpp  CameraDialog.cpp  CameraDialog.hpp  CameraPage.cpp  CameraPage.hpp  DashboardPage.cpp  DashboardPage.hpp  DetectionView.cpp  DetectionView.hpp  LiveViewPage.cpp  LiveViewPage.hpp  PlaceholderPage.cpp  PlaceholderPage.hpp  SettingsPage.cpp  SettingsPage.hpp
docs/architecture/: callbacks-atlas.md  callbacks-atlas.vi.md  detection-callback-flow.md  detection-callback-flow.vi.md  live-view-dataflow.md  live-view-dataflow.vi.md  live-view-streaming.md
docs/interview/: phase-10.md  phase-10.vi.md  phase-11.md  phase-11.vi.md  phase-6.md  phase-6.vi.md  phase-7.md  phase-7.vi.md  phase-8.md  phase-8.vi.md  phase-9.md  phase-9.vi.md
docs/screenshots/: README.md
service/: CMakeLists.txt
service/src/: AlertManager.cpp  AlertManager.hpp  AlertRepository.cpp  AlertRepository.hpp  AlertServiceImpl.cpp  AlertServiceImpl.hpp  CameraManager.cpp  CameraManager.hpp  CameraModel.hpp  CameraRepository.cpp  CameraRepository.hpp  CameraServiceImpl.cpp  CameraServiceImpl.hpp  GrpcServer.cpp  GrpcServer.hpp  HealthServiceImpl.cpp  HealthServiceImpl.hpp  NotificationServiceImpl.cpp  NotificationServiceImpl.hpp  StreamServiceImpl.cpp  StreamServiceImpl.hpp  SystemServiceImpl.cpp  SystemServiceImpl.hpp  main.cpp
service/src/notify/: ChannelFactory.cpp  ChannelFactory.hpp  EmailChannel.cpp  EmailChannel.hpp  Http.cpp  Http.hpp  NotificationChannel.hpp  NotificationManager.cpp  NotificationManager.hpp  Payloads.cpp  Payloads.hpp  SlackChannel.cpp  SlackChannel.hpp  TelegramChannel.cpp  TelegramChannel.hpp  WebhookChannel.cpp  WebhookChannel.hpp
service/src/pipeline/: Alert.hpp  DeepStreamPipeline.cpp  DeepStreamPipeline.hpp  Detection.hpp  DetectionProcessor.cpp  DetectionProcessor.hpp  FakePipeline.cpp  FakePipeline.hpp  Frame.hpp  Pipeline.hpp  PipelineFactory.cpp  PipelineFactory.hpp  PipelineManager.cpp  PipelineManager.hpp
service/src/system/: SystemMonitor.cpp  SystemMonitor.hpp
tests/: CMakeLists.txt  alert_manager_test.cpp  alert_repository_test.cpp  alert_roundtrip_test.cpp  camera_manager_test.cpp  camera_repository_test.cpp  camera_roundtrip_test.cpp  detection_processor_test.cpp  health_roundtrip_test.cpp  navigation_test.cpp  notification_manager_test.cpp  notification_roundtrip_test.cpp  payloads_test.cpp  pipeline_manager_test.cpp  smoke_test.cpp  stream_roundtrip_test.cpp  system_monitor_test.cpp  system_roundtrip_test.cpp
